--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 html, body {
   margin: 0;
   padding: 0;
+  background-color: rgb(28, 28, 28);
 }
 canvas {
   display: block;
+  margin-left: 600px;
+  margin-top: 300px;
 }
